implementando a camada service de produtos-service